# tauri-plugin-crux

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
crux-example/: Cargo.toml
crux-example/shared/: Cargo.toml  expanded.rs
crux-example/shared/src/: app.rs  lib.rs
crux-example/shared/src/capabilities/: sse.rs
crux-example/shared_types/: Cargo.toml  build.rs
examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: core.ts  http.ts
examples/tauri-app/src/routes/: +page.svelte
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: handle_response.toml  process_event.toml  view.toml
permissions/schemas/: schema.json
src/: crux.rs  desktop.rs  lib.rs  mobile.rs
