[package]
name = "tauri-plugin-crux"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.86.0"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-crux"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
crux_core = "0.14"
serde_json = "1.0.140"
base64 = "0.22.1"
# use crux's version
bincode = "=1.3.3"
slab = "0.4.9"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
