[package]
name = "tauri-plugin-crux"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.86.0"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-crux"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
bincode = "1"
tokio = "1"
crux_core = { git = "https://github.com/redbadger/crux.git", branch = "viktor/effect-routing" } #"0.17"
slab = "0.4.12"
base64 = "0.22.1"
serde_json = "1.0.149"
tracing = "0.1.44"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
