[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"


[[bin]]
name = "codegen"
required-features = ["codegen"]

[features]
default = []
codegen = [
    "crux_core/bindgen",
    "dep:clap",
    "dep:log",
    "dep:pretty_env_logger",
    "uniffi",
    "facet_typegen",
]
facet_typegen = ["crux_core/facet_typegen"]

[dependencies]
anyhow.workspace = true
crux_core.workspace = true
crux_http.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
wasm-bindgen = "0.2"
chrono = { version = "0.4.40", features = ["serde"] }
url = "2.5.4"
async-std = "1.13.1"
async-sse = "5.1.0"
futures = "0.3.31"
serde_json = "1.0.140"
facet = "0.44"
facet_generate = "0.17"

clap = { version = "4.6.1", optional = true, features = ["derive"] }
log = { version = "0.4.29", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
uniffi = { version = "0.29.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }
