[package]
name = "shared_types"
version = "0.1.0"
edition = "2024"

[build-dependencies]
anyhow.workspace = true
crux_core = { workspace = true, features = ["facet_typegen"] }
crux_http = { workspace = true, features = ["facet_typegen"] }
shared = { path = "../shared", features = ["facet_typegen"] }
serde_json = "1"
